--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "name": "discord-bot-js-template",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "bot.js",
   "author": "datsfilipe <datsfilipe@gmail.com>",
   "dependencies": {
-    "discord.js": "^12.5.3"
+    "discord.js": "^12.5.3",
+    "dotenv": "^8.2.0",
+    "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.41"
   }
 }
