--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "discord-bot-js-template",
-  "version": "0.0.1",
+  "version": "1.0",
+  "license": "LICENSE",
   "main": "bot.js",
   "author": "datsfilipe <datsfilipe@gmail.com>",
   "dependencies": {
